# ImEffects

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  readme.md
.github/workflows/: emscripten.yml  linux.yml  osx.yml  sources.yml  win.yml
cmake/: 3rdparty.cmake  imgui.cmake
src/frame/: frame.cpp  frame.h
src/helpers/: RenderDocApp.h  RenderDocController.cpp  RenderDocController.h
src/mains/: main_opengl3.cpp  main_vulkan.cpp
